# sxg-sp1

./: LICENSE-MIT  README.md
contracts/src/: Sxg.sol
contracts/src/fixtures/: groth16-fixture.json  plonk-fixture.json
contracts/test/: Sxg.t.sol
elf/: riscv32im-succinct-zkvm-elf
lib/: Cargo.toml
lib/src/: lib.rs  sxg.rs  test_case_1.rs  test_case_2.rs  test_cases.rs
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml  sxg_input_1.json  sxg_input_2.json
