[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
sha2 = { version = "0.10", default-features = false }
p256 = "0.13.2"
hex = "0.4.3"
serde = { version = "1.0",features = ["derive"] }
base64 = "0.22.1"

[patch.crates-io]
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "patch-v0.10.8" }
